# python-project-49

./: .gitignore  Dockerfile  Makefile  README.md  brain_games.db  pyproject.toml
brain_games/: admin.py  app.py  engine.py  game.py  models.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/instance/: games.db
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/static/: app.js  main.css
brain_games/templates/: bar.html  game.html  index.html  layout.html
