[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games. A set of five console games"
authors = ["Nikolai Gordienko <nicolas.gordienko@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/NikGor/python-project-49"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flask = "^2.3.2"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
flask-admin = "^1.6.1"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.21"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"